  * dh_ucf.1: Apply patch from Nicolas Boulenguez to add missing
    documentation of the "--all" and non-option parameters.
    (Closes: #894228)
  * dh_installxfonts: Apply patch from Nicolas Boulenguez.  This
    ensures that the generated maintscript snippets are bit-for-bit
    reproducible when a package ships xfons in multiple fonts
    directories.  (Closes: #894227)

 -- Niels Thykier <niels@thykier.net>  Mon, 26 Feb 2018 19:32:52 +0000

debhelper (11.1.5) unstable; urgency=medium

  * Upload to unstable.
  * Add a warning for using the new experimental feature for
    requesting the compat level via the Build-Depends field.

 -- Niels Thykier <niels@thykier.net>  Sun, 25 Feb 2018 10:05:22 +0000

debhelper (11.1.5~alpha1) experimental; urgency=medium

  * dh_installdocs: Add missing documentation about --sourcedir
    in compat 11.
  * dh_installdocs: Document that d/tmp is used by default
    in compat 11.
  * dh_installexamples: Ditto.
  * dh_installinfo: Ditto.
  * dh_installman: Ditto.
  * meson.pm: Apply patch from Jakub Wilk to fix typo in the name
    of the "C.UTF-8" locale.
  * autoscripts/postinst-systemd-restart: Apply patch from
    Christoph Biedl to fix indentation.  (Closes: #890373)
  * dh_testroot: With the advent of DEB_RULES_REQUIRES_ROOT, it
    no longer needs to read debian/control to tell whether root
    is needed or not.  However, the warning remains for calling
    dh_testroot outside the source root (as we may need to check
    the compat level in a future version of debhelper).
  * makefile.pm: Synchronize output from make (via -O) when
    make runs in parallel except when STDOUT is a TTY.  Thanks
    to Goswin von Brederlow for the suggestion.  (Closes: #768791)
  * dh_gencontrol: Avoid uninitialized value warning when there
    are no build-ids (e.g. because the builder disabled the
    dbgsym building via DEB_BUILD_OPTIONS).  This regression
    was introduced in 11.1.  Thanks to Christian Marillat for